testdata/language-features/basic-list/list10.reject.out
type error: can not unify
  'Internals.lc:58:6:
  data Int
       ^^^
with
  Float
in []
------------ trace
!type error: can not unify
  'Internals.lc:58:6:
  data Int
       ^^^
with
  Float
in []
------------ tooltips
list10.reject.lc 1:10-1:11
    _b
list10.reject.lc 1:12-1:15
    Float
list10.reject.lc 1:20-1:25
    Type
list10.reject.lc 1:21-1:24
    Type